@@ -174,6 +174,8 @@ NEW FEATURES
 	wildcards interpreted -- this helps with e.g. unlink("a[b")
 	which previously needed to be unlink("a\\[b").
 
+    o	abbreviate() gaines an optional switch 'strict'.
+
 
 INSTALLATION
 
